--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ bench = false
 [dependencies]
 aoc-runner = "0.3.0"
 aoc-runner-derive = "0.3.0"
-
+nom = "6.0.1"
 
 [profile.release]
 debug = true
