--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ bench = false
 aoc-runner = "0.3.0"
 aoc-runner-derive = "0.3.0"
 nom = "6.0.1"
+strum = { version = "0.20", features = ["derive"] }
 
 [profile.release]
 debug = true
