--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ aoc-runner = "0.3.0"
 aoc-runner-derive = "0.3.0"
 nom = "6.0.1"
 strum = { version = "0.20", features = ["derive"] }
+itertools = "0.9.0"
 
 [profile.release]
 debug = true
