--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ aoc-runner-derive = "0.3.0"
 nom = "6.0.1"
 strum = { version = "0.20", features = ["derive"] }
 itertools = "0.9.0"
+nom-supreme = "0.4.1"
 
 [profile.release]
 debug = true
