--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [workspace]
-members = ["2021/01", "2021/02", "2021/03", "2023/01", "2023/02", "2023/03"]
+members = ["2021/01", "2021/02", "2021/03", "2023/01", "2023/02", "2023/03", "2023/04"]
 resolver = "2"
 
 
