--- a/2020/04/Cargo.toml
+++ b/2020/04/Cargo.toml
@@ -11,3 +11,7 @@ path = "src/04.rs"
 aoclib = "0.2.1"
 nom = "7.1.3"
 strum = { version = "0.20", features = ["derive"] }
+
+
+[lints]
+workspace = true
