--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,8 +9,8 @@ bench = false
 
 [dependencies]
 rust-crypto = "0.2.36"
-aoc-runner = "0.2.2"
-aoc-runner-derive = "0.2.2"
+aoc-runner = "0.3.0"
+aoc-runner-derive = "0.3.0"
 trees = "0.2.1"
 permutohedron = "0.2.4"
 crossbeam-channel = "0.4"
@@ -18,6 +18,8 @@ crossbeam-utils = "0.7.0"
 bytecount = "0.6.0"
 gcd = "1.2.0"
 nom = "5.0.1"
+termion = "1.5.4"
+petgraph = "0.5.0"
 
 [profile.release]
 debug = true
