--- a/Cargo.toml
+++ b/Cargo.toml
@@ -83,4 +83,5 @@ enum_glob_use = "allow"
 missing_panics_doc = "allow"
 must_use_candidate = "allow"
 pedantic = "warn"
-return_self_not_must_use = "allow"
+cast_precision_loss = "allow"
+cast_possible_wrap = "allow"
