--- a/2018/03/Cargo.toml
+++ b/2018/03/Cargo.toml
@@ -9,10 +9,7 @@ path = "src/03.rs"
 
 [dependencies]
 aoclib = "0.2.1"
-
-[dependencies.nom]
-version = "4.1.1"
-features = ["verbose-errors"]
+nom = "7.1.3"
 
 
 [lints]
