--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,8 @@ members = [
     "2019/23",
     "2019/24",
     "2019/25",
+    "2019/compute",
+    "2019/ocr",
     "2020/01",
     "2020/02",
     "2020/03",
